prod_snapshot_2015-09-24_1030/objects/Job_Position__c.object
<CustomObject>
    <fields>
        <fullName>Compensation__c</fullName>
        <inlineHelpText>How much does this position pay?</inlineHelpText>
        <label>Compensation</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Department_Category__c</fullName>
        <description>Determines if the Final Authorization for this request will go to Brad or Dax</description>
        <label>Department Category</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Final_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Final Approver for the Job Position Request</description>
        <label>Final Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Job_Positions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Period__c</fullName>
        <description>Time span in which the position will need to be filled</description>
        <inlineHelpText>Time span in which the position will need to be filled</inlineHelpText>
        <label>Fulfillment Period</label>
        <picklist>
            <picklistValues>
                <fullName>Next 30 Days</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Next 60 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Next 90 Days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interview_Process__c</fullName>
        <description>A Quick list of who the candidate will interview with</description>
        <inlineHelpText>A Quick list of who the candidate will interview with

I.E. {Name of Department Supervisor}, {Name of Hiring Manager}, then {Name of Department Head}</inlineHelpText>
        <label>Interview Process</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <label>Job Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Position_Type__c</fullName>
        <inlineHelpText>Is this a new position to be filled? 
Or Is this to fill an already existing position?</inlineHelpText>
        <label>Job Position Type</label>
        <picklist>
            <picklistValues>
                <fullName>Replacement</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>New Position</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <description>The Name of the Position to be Filled</description>
        <inlineHelpText>The Name of the Position to be Filled</inlineHelpText>
        <label>Job Title</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Positions_Available__c</fullName>
        <description>Number of seats available for this position</description>
        <inlineHelpText>Number of seats available for this position</inlineHelpText>
        <label>Positions Available</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who will this person report to?</inlineHelpText>
        <label>Supervisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Job_Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_being_replaced__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of the User being replaced</inlineHelpText>
        <label>User being replaced</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Job_Positions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Job Position</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JP{0000}</displayFormat>
        <label>Job Postions ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Replacement_User</fullName>
        <active>true</active>
        <description>If the Replacement User Type is selected, the User must select a replacement user</description>
        <errorConditionFormula>ISPICKVAL(Job_Position_Type__c, &quot;Replacement&quot;)  &amp;&amp;  isNull(User_being_replaced__c)</errorConditionFormula>
        <errorDisplayField>User_being_replaced__c</errorDisplayField>
        <errorMessage>Please enter the user being replaced</errorMessage>
    </validationRules>
</CustomObject>